--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,15 @@
-//add everything here
+group 'com.epam'
+version '1.0.0'
+
+
+
+repositories {
+    mavenCentral();
+}
+
+dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.10'
+}
 
 test {
     useJUnitPlatform()
