--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    // id for library
-    // id for maven to publish jar to local repository
+       id 'java' 
+       id 'maven-publish'
 }
 
 java {
@@ -11,12 +11,13 @@ repositories {
 // provide repository, where required dependencies are located
 }
 
+
 publishing {
     publications {
-        maven(MavenPublication) {
-// provide groupId
-// provide artifactId
-// provide version
+        maven(MavenPublication){
+       groupId 'org.apache.commons'
+       artifactId 'commons-lang3'
+       version '3.10'
 
             from components.java
         }
